# AMICO

./: .cirrus.yml  .gitignore  .project  .readthedocs.yml  AMICO_Setup.txt  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_site.py  site.cfg.example
.github/workflows/: build_wheels.yml  compile_openblas_linux.yml  compile_openblas_macos.yml  compile_openblas_macos_x86_64.yml  macos_arm64_wheels.yml  publish_on_pypi.yml
amico/: __init__.py  analytic_formulas.py  core.py  core.py.save  info.py  lut.pxd  lut.py  lut.pyx  models.py  models.pyx  preproc.py  progressbar.py  scheme.py  synthesis.py  util.py
doc/demos/: NODDI_01.md  NODDI_lowres.md  README.md  preproc_debias.md
doc/demos/ActiveAx/: README.md
doc/demos/NODDI/: README.md
docs/: index.md  installation.md  news.md  requirements.txt
docs/about/: LICENSE.md  credits.md
docs/api_reference/: amico.md  core.md  models.md  util.md
docs/configuration/: angular_resolution.md  config_params.md  models_params.md  multithreading.md  rician_bias.md
docs/css/: extra.css
docs/tutorials/: ACTIVEAX.md  NODDI.md  SANDI.md
kernels/: AMICO_CreateHighResolutionScheme.m  AMICO_CreateYlm.m  AMICO_GenerateKernels.m  AMICO_GenerateKernels_ACTIVEAX.m  AMICO_GenerateKernels_NODDI.m  AMICO_LoadKernels.m  AMICO_LoadScheme.m  AMICO_PrecomputeRotationMatrices.m  AMICO_ResampleIsoKernel.m  AMICO_ResampleKernels.m  AMICO_ResampleKernels_ACTIVEAX.m  AMICO_ResampleKernels_NODDI.m  AMICO_RotateAndSaveKernels.m  AMICO_RotateAndSaveKernels_ACTIVEAX.m  AMICO_RotateAndSaveKernels_NODDI.m  AMICO_RotateKernel.m  AMICO_Scheme2noddi.m
matlab/: AMICO_Setup.txt  README.md
matlab/doc/demos/ActiveAx/: README.md
matlab/doc/demos/NODDI/: README.md
matlab/kernels/: AMICO_CreateHighResolutionScheme.m  AMICO_CreateYlm.m  AMICO_GenerateKernels.m
matlab/models/: AMICO_ACTIVEAX.m  AMICO_NODDI.m  AMICO_NODDI_EXVIVO.m  AMICO_WATERFREE.m
matlab/optimization/: AMICO_Fit.m
matlab/other/: AMICO_fsl2scheme.m
models/: AMICO_ACTIVEAX.m  AMICO_NODDI.m  AMICO_VERDICTPROSTATE.m  AMICO_WATERFREE.m
optimization/: AMICO_Fit.m  AMICO_Fit_ACTIVEAX.m  AMICO_Fit_NODDI.m  AMICO_fit.m  AMICO_fit_ACTIVEAX.m  AMICO_fit_NODDI.m
other/: AMICO_LoadData.m  AMICO_LoadScheme.m  AMICO_SetModel.m  AMICO_SetSubject.m  ProgressBar.m
python/: README.md  setup.py
python/amico/: __init__.py  core.py  lut.py  models.py  progressbar.py  scheme.py  util.py
python/doc/demos/: ACTIVEAX_01.md  NODDI_01.md  NODDI_turorial_01.md  README.md
src/amico/: __init__.py  core.py  models.pyx  scheme.py  util.py
