[build-system]
requires = [
    "setuptools>=59.6.0",
    "Cython>=3.0.6",
    "spams-cython>=1.0.0"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# before-test = "python -m pip install -U pip && pip install -U setuptools && pip install -r requirements.txt --only-binary :all:"
# test-command = "pip list"
# test-skip = "*-win32 cp38-macosx_arm64 *-manylinux_aarch64"
build-verbosity = 3
