[metadata]
name = dmri-amico
version = 2.0.0
url = https://github.com/daducci/AMICO
download_url = https://pypi.org/project/dmri-amico
project_urls =
    Homepage = https://github.com/daducci/AMICO
    Documentation = https://github.com/daducci/AMICO/wiki
    Source = https://github.com/daducci/AMICO
    Changelog = https://github.com/daducci/AMICO/blob/master/CHANGELOG.md
    Download = https://pypi.org/project/dmri-amico
    Tracker = https://github.com/daducci/AMICO/issues
author = Alessandro Daducci
author_email = alessandro.daducci@univr.it
maintainer = Alessandro Daducci
maintainer_email = alessandro.daducci@univr.it
classifiers =
    Topic :: Scientific/Engineering :: Image Processing
    License :: Other/Proprietary License
    Programming Language :: Cython
    Programming Language :: Python
    Operating System :: OS Independent
    Intended Audience :: Science/Research
license = Proprietary License
license_files = LICENSE
description = Accelerated Microstructure Imaging via Convex Optimization (AMICO)
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    Neuroimaging
    Diffusion MRI
    Microstructure Imaging

[options]
zip_safe = False
install_requires =
    numpy>=1.19.5
    scipy>=1.5.4
    dipy>=1.4.1
    threadpoolctl>=3.1.0
    dmri-dicelib>=1.0.1
    importlib-metadata>=4.8.3; python_version<"3.8"
python_requires = >=3.6
packages =
    amico
    amico.directions
include_package_data = False

[options.package_data]
amico.directions =
    *.bin
